hard-gists-me/5088386/log.txt
Traceback (most recent call last):
  File "snippet.py", line 2, in <module>
    import django_filters
  File "/usr/local/lib/python2.7/site-packages/django_filters/__init__.py", line 4, in <module>
    from .filterset import FilterSet
  File "/usr/local/lib/python2.7/site-packages/django_filters/filterset.py", line 184
    def __init__(self, data=None, queryset=None, *, request=None, prefix=None):
                                                  ^
SyntaxError: invalid syntax
